[package]
name = "phone-trie"
version = "0.1.0"
edition = "2021"
authors = ["ESGI B3 SRC"]
description = "Gestionnaire de numéros de téléphone basé sur un trie (prefix tree)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
